--- a/package.json
+++ b/package.json
@@ -45,31 +45,33 @@
     "vue-query": "ayamflow/vue-query"
   },
   "devDependencies": {
-    "gulp": "*",
-    "watchify": "*",
-    "gulp-plumber": "*",
-    "gulp-autoprefixer": "0.0.8",
-    "gulp-sass": "*",
-    "vinyl-source-stream": "*",
-    "napa": "*",
+    "browser-sync": "~1.5.3",
     "browserify": "^5.9.1",
     "browserify-shim": "*",
-    "gulp-notify": "^1.4.0",
-    "vue-debug": "*",
-    "html-browserify": "*",
+    "debounce": "*",
     "del": "*",
+    "gulp": "*",
+    "gulp-autoprefixer": "0.0.8",
     "gulp-jshint": "^1.8.2",
-    "gulp-util": "^3.0.0",
+    "gulp-minify-css": "~0.3.8",
+    "gulp-notify": "^1.4.0",
+    "gulp-plumber": "*",
+    "gulp-sass": "*",
+    "gulp-streamify": "0.0.5",
     "gulp-uglify": "*",
+    "gulp-util": "^3.0.0",
+    "html-browserify": "*",
+    "jshint-stylish": "*",
+    "napa": "*",
+    "node-bourbon": "^1.2.3",
+    "node-neat": "^1.3.0",
     "pretty-hrtime": "*",
     "remapify": "*",
-    "jshint-stylish": "*",
-    "debounce": "*",
+    "vinyl-source-stream": "*",
     "vue": "^0.10.6",
-    "yargs": "*",
-    "gulp-streamify": "0.0.5",
-    "gulp-minify-css": "~0.3.8",
-    "browser-sync": "~1.5.3"
+    "vue-debug": "*",
+    "watchify": "*",
+    "yargs": "*"
   },
   "dependencies": {
     "vue-el": "*",
